<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Sosyal</string>

    <string name="rayzorpay_key_id">rzp_live_K4GloJ8zJt5Kwn</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">hs9lKIEITvW7079fE86BrA2q8 </string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">BNS1gwBrtNEKkn1uL6YtfyOVT8s7tWwsgufTyhEx59kFFmgHFB </string>

    <string name="enter_e_mail">Enter E-mail</string>
    <string name="your_message">your message</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="you_can_also_sign_in_with">You can also Sign in with</string>
    <string name="dont_t_have_an_account_yet">Dont\'t have an account yet?</string>
    <string name="register_now">Register Now</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="phone_no">Phone No.</string>
    <string name="password">Password</string>
    <string name="referral_code">Referral Code</string>
    <string name="verify">Verify</string>
    <string name="we_have_sent_an_otp_on_your_number">We have sent an otp on your number</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="we_have_sent_an_otp_on_your_email">We have sent a code on your email</string>
    <string name="email_verification">Email Verification</string>
    <string name="enter_verification_code">Enter Verification Code</string>

    <string name="no_response">No Response from server!</string>
    <string name="api_failure">Please Check your connection or try again later!</string>
    <string name="life_style">Life Style</string>
    <string name="category">Category</string>
    <string name="popular_products">Popular Products</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wallet">My Wallet</string>
    <string name="detail">Detail</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="enter_the_e_mail_address_nassociated_with_your_account">Enter the e-mail address\nassociated with your
        Account
    </string>
    <string name="send">Send</string>
    <string name="enter_e_mail_address">Enter E-mail Address</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="wallet">Wallet</string>
    <string name="lifestyle">LifeStyle</string>
    <string name="klub">Klub</string>
    <string name="channel">diskoveru channel</string>
    <string name="pick_a_plan">Pick a Plan</string>
    <string name="notifications">Notifications</string>

    <string name="help_support">We would love to hear from you,\nfor any Help/Feedback/Suggestion please email us at <font fgcolor='#DD5B5F'>sosyal@diskoveruklub.com</font></string>

    <string-array name="asas">
        <item>asdasd</item>
        <item>asdasd</item>
        <item>asdasd</item>
        <item>asdasd</item>
        <item>asdasd</item>
        <item>asdasd</item>
        <item>asdasdasdasdasdasd</item>
    </string-array>


    <string name="cancel">Cancel</string>
    <string name="kilobyte">KB</string>
    <string name="megabyte">MB</string>
    <string name="save">Save</string>
    <string name="short_seconds">sec</string>
</resources>
