<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/products_background"
        android:weightSum="10">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"/>

    <androidx.cardview.widget.CardView
            app:cardCornerRadius="4dp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:layout_gravity="center">
        <TextView
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_semi_bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"/>

    <ImageView
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_forgot"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"/>

    <TextView
            android:gravity="center"
            android:text="@string/enter_the_e_mail_address_nassociated_with_your_account"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>

    <EditText
        android:id="@+id/etForgot"
            android:hint="@string/enter_e_mail_address"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnForgot"
            android:layout_gravity="center"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorMattBlue"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="0dp"
            android:layout_weight="0.75"/>

</LinearLayout>