<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:weightSum="10">

    <View android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.9"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="7.1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <!--Email-->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLoginEmail"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_e_mail"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:padding="@dimen/_12sdp"
            android:drawablePadding="@dimen/_12sdp"
            android:drawableStart="@drawable/ic_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Password-->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLoginPassword"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:padding="@dimen/_12sdp"
            android:drawablePadding="@dimen/_12sdp"
            android:drawableStart="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--checkbox & forgot password-->
        <RelativeLayout
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cbLoginRememberMe"
                android:text="@string/remember_me"
                android:fontFamily="@font/montserrat_regular"
                android:checked="true"
                android:textSize="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:button="@drawable/check_box_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_toEndOf="@+id/cbLoginRememberMe"
                android:id="@+id/tvLoginForgot"
                android:textSize="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:text="@string/forgot_password"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/colorBlack"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center">

            <!--Login-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLoginSubmit"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorRed"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_14sdp"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_34sdp"/>

            <!--Login-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLoginRegister"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_button"
                android:text="@string/register"
                android:layout_marginStart="@dimen/_16sdp"
                android:textAllCaps="false"
                android:textColor="@color/colorRed"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_14sdp"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_34sdp"/>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/_12sdp"
            android:text="@string/you_can_also_sign_in_with"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/colorRed"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--social button-->
        <RelativeLayout
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/flTwitter"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_30sdp"
                >

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/btnLoginTwitter"
                    android:text="Twitter"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <ImageView
                    android:id="@+id/ivLoginTwitter"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/ic_twitter_login"
                    android:background="@drawable/login_button"
                    android:layout_width="@dimen/_64sdp"
                    android:layout_height="@dimen/_30sdp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_toEndOf="@+id/flTwitter"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_30sdp"
                >

                <com.google.android.gms.common.SignInButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    />

                <ImageView
                    android:id="@+id/google_signIn"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/ic_google"
                    android:background="@drawable/login_button"
                    android:layout_width="@dimen/_64sdp"
                    android:layout_height="@dimen/_30sdp"/>
            </FrameLayout>
        </RelativeLayout>

        <!--bottom register text-->
        <LinearLayout
            android:visibility="gone"
            android:gravity="bottom"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/_11sdp"
                android:text="@string/dont_t_have_an_account_yet"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginRegisterNow"
                android:layout_marginStart="@dimen/_8sdp"
                android:textSize="@dimen/_13sdp"
                android:text="@string/register_now"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>