<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/ic_otp_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"/>

    <androidx.cardview.widget.CardView
            app:cardCornerRadius="4dp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:layout_gravity="center">
        <TextView
                android:gravity="center"
                android:text="@string/email_verification"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_regular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"/>

    <TextView
            android:gravity="center"
            android:text="@string/enter_verification_code"
            android:textSize="@dimen/_16sdp"
            android:textColor="#BD2125"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"/>

    <TextView
            android:gravity="center_horizontal"
            android:id="@+id/tvEmailOtp"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"/>

    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8">

        <EditText
                android:id="@+id/etEmailOtpFirst"
                android:inputType="number"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/colorWhite"
                android:background="@drawable/otp_edittext_background"
                android:layout_width="@dimen/_34sdp"
                android:layout_height="@dimen/_34sdp"
                tools:ignore="TextFields"/>
        <EditText
                android:id="@+id/etEmailOtpSecond"
                android:inputType="number"
                android:maxLength="1"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="8dp"
                android:background="@drawable/otp_edittext_background"
                android:layout_width="@dimen/_34sdp"
                android:layout_height="@dimen/_34sdp"
                tools:ignore="TextFields"/>
        <EditText
                android:id="@+id/etEmailOtpThird"
                android:inputType="number"
                android:maxLength="1"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="8dp"
                android:background="@drawable/otp_edittext_background"
                android:layout_width="@dimen/_34sdp"
                android:layout_height="@dimen/_34sdp"
                tools:ignore="TextFields"/>
        <EditText
                android:id="@+id/etEmailOtpFourth"
                android:inputType="number"
                android:maxLength="1"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="8dp"
                android:background="@drawable/otp_edittext_background"
                android:layout_width="@dimen/_34sdp"
                android:layout_height="@dimen/_34sdp"
                tools:ignore="TextFields"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


    <androidx.appcompat.widget.AppCompatButton
            android:layout_gravity="center"
            android:id="@+id/btnEmailOtpVerify"
            android:text="@string/verify"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/montserrat_regular"
            android:background="@drawable/verify_button"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="0dp"
            android:layout_weight="0.6"/>

</LinearLayout>